--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <script src="https://kit.fontawesome.com/3d50578d21.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>ToysEmAll - Inicio</title>
+    
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+    </script><title>ToysEmAll - Inicio</title>
 </head>
-<body>
+<body id="cuerpo">
     <header class="header-container">        
         <nav class="navbar list">
             <ul>
@@ -29,8 +33,39 @@
             <a href="./pages/contacto.html" class="login"><span>Contacto</span></a> 
         </div>
     </header>
-    <div class="banner">
-        <img src="./img/banner.jpg" alt="Star Wars Collection">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+        <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+    <div class="carousel-item active">
+        <img src="./img/banner.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+    <h5>Star Wars Collection</h5>
+    <p>Agranda tu coleccion de Star Wars con estas ofertas.</p>
+        </div>
+    </div>
+    <div class="carousel-item">
+        <img src="./img/banner2.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+        <img src="./img/banner3.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+    <h5>Batman 89'</h5>
+    <p>Enterate del estreno de Batman 89' en comic.</p>
+        </div>
+    </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+        </button>
     </div>
     <main>
         <div class="productos-destacados-container">
@@ -39,25 +74,61 @@
                 <div class="producto-tarjeta">
                     <img class="producto-imagen" src="./img/ironman.jpg" alt="Iron Man - Hot Toys" height="500" width="700">
                     <h4 class="producto-nombre">Iron Man - Hot Toys escala 1/6</h4>
-                    <p class="producto-descripcion">DieCast Version.</p>
+                    <p>
+                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                        +Info
+                        </a>                        
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                        <div class="card card-body">
+                    DieCast Version.
+                        </div>
+                    </div>
                     <button class="boton">Comprar</button>
                 </div>
                 <div class="producto-tarjeta">
                     <img class="producto-imagen" src="./img/spiderman.webp" alt="Spiderman - Hot Toys" height="500" width="700">
                     <h4 class="producto-nombre">Spiderman - Hot Toys escala 1/6</h4>
-                    <p class="producto-descripcion">Advanced Suit Version.</p>
+                    <p>
+                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                        +Info
+                        </a>                        
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                        <div class="card card-body">
+                        Advanced Suit Version.
+                        </div>
+                    </div>
                     <button class="boton">Comprar</button>
                 </div>
                 <div class="producto-tarjeta">
                     <img class="producto-imagen" src="./img/batman.jpeg" alt="Batman - Hot Toys" height="500" width="700">
                     <h4 class="producto-nombre">Batman - Hot Toys escala 1/6</h4>
-                    <p class="producto-descripcion">The Batman (Robert Pattison).</p>
+                    <p>
+                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                        +Info
+                        </a>                        
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                        <div class="card card-body">
+                            The Batman (Robert Pattison).
+                        </div>
+                    </div>
                     <button class="boton">Comprar</button>
                 </div>
                 <div class="producto-tarjeta">
                     <img class="producto-imagen" src="./img/stormtrooper.jpg" alt="Stormtrooper - Hot Toys" height="500" width="700">
                     <h4 class="producto-nombre">Stormtrooper - Sideshow escala 1/6</h4>
-                    <p class="producto-descripcion">Stormtrooper (Rogue One).</p>
+                    <p>
+                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                        +Info
+                        </a>                        
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                        <div class="card card-body">
+                            Stormtrooper (Rogue One).
+                        </div>
+                    </div>
                     <button class="boton">Comprar</button>
                 </div>
             </section>
