--- a/pages/shop.html
+++ b/pages/shop.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="../styles/styles.css">
     <script src="https://kit.fontawesome.com/3d50578d21.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <title>ToysEmAll - Shop</title>
 </head>
-<body>
+<body id="cuerpo">
     <header class="header-container">        
         <nav class="navbar list">
             <ul>
@@ -29,87 +32,222 @@
             <a href="./contacto.html" class="login"><span>Contacto</span></a> 
         </div>
     </header>
-
-    <div class="banner">
-        <img src="../img/banner.jpg" alt="Star Wars Collection">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+        <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+    <div class="carousel-item active">
+            <img src="../img/banner.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+    <h5>Star Wars Collection</h5>
+    <p>Agranda tu coleccion de Star Wars con estas ofertas.</p>
+            </div>
     </div>
-
-    <div class="seccion-titulo">
-        <h3 class="producto-titulo">Nuestros productos</h3>
-    </div>    
+    <div class="carousel-item">
+            <img src="../img/banner2.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+            <img src="../img/banner3.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+    <h5>Batman 89'</h5>
+    <p>Enterate del estreno de Batman 89' en comic.</p>
+            </div>
+    </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+        </button>
+    </div>   
+    <h2 class="seccion-titulo producto-titulo">Nuestros productos</h2>
 
     <main class="shop-container">     
         <div class="producto-tarjeta producto1">
             <img class="producto-imagen" src="../img/ironman.jpg" alt="Iron Man - Hot Toys" height="500" width="700">
             <h4 class="producto-nombre">Iron Man - Hot Toys</h4>
-            <p class="producto-descripcion">DieCast.</p>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                +Info
+                </a>                        
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+            DieCast Version.
+                </div>
+            </div>
             <button class="boton">Comprar</button>
         </div>        
         <div class="producto-tarjeta">
             <img class="producto-imagen" src="../img/spiderman.webp" alt="Spiderman - Hot Toys" height="500" width="700">
             <h4 class="producto-nombre">Spiderman - Hot Toys</h4>
-            <p class="producto-descripcion">Advanced Suit Version.</p>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                +Info
+                </a>                        
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                Advanced Suit Version.
+                </div>
+            </div>
             <button class="boton">Comprar</button>
         </div>
         <div class="producto-tarjeta">
             <img class="producto-imagen" src="../img/batman.jpeg" alt="Batman - Hot Toys" height="500" width="700">
             <h4 class="producto-nombre">Batman - Hot Toys</h4>
-            <p class="producto-descripcion">The Batman (Robert Pattison).</p>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                +Info
+                </a>                        
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    The Batman (Robert Pattison).
+                </div>
+            </div>
             <button class="boton">Comprar</button>
         </div>
         <div class="producto-tarjeta">
             <img class="producto-imagen" src="../img/stormtrooper.jpg" alt="Stormtrooper - Hot Toys" height="500" width="700">
             <h4 class="producto-nombre">Stormtrooper - Sideshow</h4>
-            <p class="producto-descripcion">Rogue One.</p>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                +Info
+                </a>                        
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    Stormtrooper (Rogue One).
+                </div>
+            </div>
             <button class="boton">Comprar</button>
         </div>
         <div class="producto-tarjeta">
             <img class="producto-imagen" src="../img/thanos.jpg" alt="Thanos - Hot Toys" height="500" width="700">
             <h4 class="producto-nombre">Thanos - Hot Toys</h4>
-            <p class="producto-descripcion">Avengers Endgame.</p>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                +Info
+                </a>                        
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    Avengers Endgame.
+                </div>
+            </div>
             <button class="boton">Comprar</button>
         </div>
         <div class="producto-tarjeta">
             <img class="producto-imagen" src="../img/superman.jpg" alt="Superman - Hot Toys" height="500" width="700">
             <h4 class="producto-nombre">Superman - Hot Toys</h4>
-            <p class="producto-descripcion">Batman V Superman</p>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                +Info
+                </a>                        
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    Batman V Superman.
+                </div>
+            </div>
             <button class="boton">Comprar</button>
         </div>
         <div class="producto-tarjeta">
             <img class="producto-imagen" src="../img/wonder-woman.jpg" alt="Wonder Woman - Hot Toys" height="500" width="700">
             <h4 class="producto-nombre">Woman Woman - Hot Toys</h4>
-            <p class="producto-descripcion">WW84.</p>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                +Info
+                </a>                        
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    WW84.
+                </div>
+            </div>
             <button class="boton">Comprar</button>
         </div>
         <div class="producto-tarjeta">
             <img class="producto-imagen" src="../img/leon-resident-evil.jpg" alt="Leon Kennedy - DAM Toys" height="500" width="700">
             <h4 class="producto-nombre">Leon Kennedy - DAM Toys</h4>
-            <p class="producto-descripcion">Resident Evil.</p>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                +Info
+                </a>                        
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    Resident Evil.
+                </div>
+            </div>
             <button class="boton">Comprar</button>
         </div>
 
         <div class="producto-tarjeta">
             <img class="producto-imagen" src="../img/wolverine.jpg" alt="Wolverine - Sideshow" height="500" width="700">
             <h4 class="producto-nombre">Wolverine - Sideshow</h4>
-            <p class="producto-descripcion">X-Men (Animated Series)</p>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                +Info
+                </a>                        
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    X-men (Animated Series)
+                </div>
+            </div>
             <button class="boton">Comprar</button>
         </div>
         <div class="producto-tarjeta">
             <img class="producto-imagen" src="../img/bobba-fett.jpg" alt="Stormtrooper - Hot Toys" height="500" width="700">
             <h4 class="producto-nombre">Bobba Fett - Sideshow</h4>
-            <p class="producto-descripcion">Star Wars Ep. V.</p>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                +Info
+                </a>                        
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    Star Wars Ep. V.
+                </div>
+            </div>
             <button class="boton">Comprar</button>
         </div>
         <div class="producto-tarjeta">
             <img class="producto-imagen" src="../img/joker1.jpg" alt="Joker Batman Who Laughs - Premium Format" height="500" width="700">
             <h4 class="producto-nombre">Joker (Premium Format)</h4>
-            <p class="producto-descripcion">Estatua en escala 1/4. ("Batman Who Laughs")</p>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                +Info
+                </a>                        
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    Estatua en escala 1/4. ("Batman Who Laughs")
+                </div>
+            </div>
             <button class="boton">Comprar</button>
         </div>
         <div class="producto-tarjeta">
             <img class="producto-imagen" src="../img/joker.jpg" alt="Joker The Dark Knight - Premium Format" height="500" width="700">
             <h4 class="producto-nombre">Joker (The Dark Knight)</h4>
-            <p class="producto-descripcion">Estatua en escala 1/4. (The Dark Night).</p>
+            <p>
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                +Info
+                </a>                        
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    Estatua en escala 1/4. (The Dark Night)
+                </div>
+            </div>
             <button class="boton">Comprar</button>
         </div>
     </main>
