--- a/pages/shop.html
+++ b/pages/shop.html
@@ -30,7 +30,7 @@
             <h3 class="subtitulo-pagina">Todas las novedades de tus heroes favoritos</h3>
         </div>
         <div class="sesion">
-            <a href="./contacto.html" class="login"><span>Contacto</span></a> 
+            <a href="./contacto.html" class="login login-rojo"><span>Contacto</span></a> 
         </div>
     </header>
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
