--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--SEO-->
+    <meta name="description" content="ToysEmAll es la mejor tienda de figuras de accion del pais">
+    <meta name="kaywords" content="toys em all, figuras, accion, sideshow, hottoys, prime1, marvel, dc, batman, superman, wonderwoman, ironman, spiderman, starwars, stormtrooper, comprar, envio, noticias, novedades, toysemall">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Oswald:wght@300&family=Roboto:ital,wght@1,100&family=Ultra&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Stint+Ultra+Condensed&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3d50578d21.js" crossorigin="anonymous"></script>
