--- a/pages/mcu.html
+++ b/pages/mcu.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--SEO-->
     <meta name="description" content="ToysEmAll te trae todas las novedades del MCU">
-    <meta name="kaywords" content="toys em all, marvel, novedades, noticias, mcu, toysemall, spiderman, ironman, thor, avengers, trailer, estreno">
+    <meta name="keywords" content="toys em all, marvel, novedades, noticias, mcu, toysemall, spiderman, ironman, thor, avengers, trailer, estreno">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Oswald:wght@300&family=Roboto:ital,wght@1,100&family=Ultra&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Stint+Ultra+Condensed&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3d50578d21.js" crossorigin="anonymous"></script>
