--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--SEO-->
     <meta name="description" content="ToysEmAll te escucha">
-    <meta name="keywords" content="toys em all, consultas, marvel, dc, compra, devolucion, dudas, toysemall">
+    <meta name="keywords" content="toys em all, consultas, preguntas, marvel, dc, compra, devolucion, dudas, toysemall">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Oswald:wght@300&family=Roboto:ital,wght@1,100&family=Ultra&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Stint+Ultra+Condensed&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3d50578d21.js" crossorigin="anonymous"></script>
