modificacion de form

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <section class="productos-destacados">
                 <div class="producto-tarjeta">
                     <img class="producto-imagen" src="./img/ironman.jpg" alt="Iron Man - Hot Toys" height="500" width="700">
-                    <h4 class="producto-nombre">Iron Man - Hot Toys escala 1/6</h4>
+                    <h4 class="producto-nombre">Iron Man - Hot Toys</h4>
                     <p>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                         +Info
@@ -91,7 +91,7 @@
                 </div>
                 <div class="producto-tarjeta">
                     <img class="producto-imagen" src="./img/spiderman.webp" alt="Spiderman - Hot Toys" height="500" width="700">
-                    <h4 class="producto-nombre">Spiderman - Hot Toys escala 1/6</h4>
+                    <h4 class="producto-nombre">Spiderman - Hot Toys</h4>
                     <p>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                         +Info
@@ -106,7 +106,7 @@
                 </div>
                 <div class="producto-tarjeta">
                     <img class="producto-imagen" src="./img/batman.jpeg" alt="Batman - Hot Toys" height="500" width="700">
-                    <h4 class="producto-nombre">Batman - Hot Toys escala 1/6</h4>
+                    <h4 class="producto-nombre">Batman - Hot Toys</h4>
                     <p>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                         +Info
@@ -121,7 +121,7 @@
                 </div>
                 <div class="producto-tarjeta">
                     <img class="producto-imagen" src="./img/stormtrooper.jpg" alt="Stormtrooper - Hot Toys" height="500" width="700">
-                    <h4 class="producto-nombre">Stormtrooper - Sideshow escala 1/6</h4>
+                    <h4 class="producto-nombre">Stormtrooper - Sideshow</h4>
                     <p>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                         +Info
