--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -90,10 +90,10 @@
                     </p>
                     <p>
                         <label>Asunto</label>
-                        <input type="text"
+                        <input type="text">
                     </p>
                     <p class="mensaje">
-                       <label>Message</label> 
+                        <label>Message</label> 
                         <textarea name="mensaje" rows="3"></textarea>
                     </p>
                     <p class="btn">
