--- a/pages/shop.html
+++ b/pages/shop.html
@@ -73,7 +73,7 @@
     <h2 class="seccion-titulo producto-titulo">Nuestros productos</h2>
 
     <main class="shop-container">     
-        <div class="producto-tarjeta producto1">
+        <div class="producto-tarjeta">
             <img class="producto-imagen" src="../img/ironman.jpg" alt="Iron Man - Hot Toys" height="500" width="700">
             <h4 class="producto-nombre">Iron Man - Hot Toys</h4>
             <p>
