--- a/index.html
+++ b/index.html
@@ -142,12 +142,14 @@
         <article class="noticias-tarjeta">
             <h3 class="noticias-titulo">Christian Bale se postula para volver a ser Batman</h3>
             <img class="noticias-imagen" src="./img/bale.jpg" alt="Christian Bale" width="560" height="315">
-        <p class="noticias-texto-imagen">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt exercitationem atque dolorem dolores laborum vel nam dolorum fugit dolor neque deleniti modi consequuntur blanditiis et, molestiae quam reiciendis, vero doloribus.</p>
-        <p class="noticias-texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque fuga quos error dolorum quo reprehenderit quidem minima quam, corrupti reiciendis? Vel omnis possimus ducimus, odit quo quisquam! Debitis, illum magnam!
-        Aliquam eius ab iure ipsam hic sequi dolorem. Quo aspernatur saepe ea, quae doloremque quas qui magni. Labore, nam quaerat repellendus, facilis possimus quos quidem pariatur culpa dolorum esse nostrum?
-        Nisi, laborum iste nesciunt ex ut beatae. Dolorum vero illo, aperiam cumque debitis, nemo eius et minima corrupti nobis impedit omnis ducimus architecto eligendi, rem qui aliquid expedita accusantium! Veniam!
-        Ipsa saepe id consectetur dignissimos aliquid odit fugit officia culpa esse voluptatum iusto quos architecto quam sit, nulla eaque possimus minus eligendi fuga qui placeat tenetur commodi! Tenetur, itaque dolore?
-        Modi sunt, assumenda debitis maiores doloribus quibusdam beatae voluptatum, et a, aspernatur nulla fugiat ullam omnis illo! Aperiam et accusantium officia earum quidem, quas explicabo, vero qui omnis repellendus fugit?</p>
+        <p class="noticias-texto-imagen">La condición de Christian Bale para volver a ser Batman.</p>
+        <p class="noticias-texto">En plena campaña promocional de 'Thor: Love and Thunder', el actor concedió una entrevista a Screenrant en la que habló sobre la posibilidad de volver al universo de Christopher Nolan. <br>
+        <br>
+        Un universo que consta de tres películas: 'Batman Begins', 'El Caballero Oscuro' y 'El Caballero Oscuro: La Leyenda Renace'. En caso de que Nolan volviese a dirigir a Bale en el papel del hombre murciélago, se trataría de la cuarta película de este magnífico dúo cinematográfico. <br>
+        <br>                
+        A la pregunta sobre un posible regreso a su papel de Batman, esta fue la respuesta de Christian Bale: "Si Chris Nolan alguna vez se dijera a sí mismo, 'Sabes qué, tengo otra historia que contar'. Y si quisiera contar esa historia conmigo, me apuntaría". <br>
+        <br>
+        La pregunta es, ¿qué historia podría contar Nolan tras su trilogía?</p>
         </article>
 
         <article class="video-tarjeta">
