--- a/pages/dceu.html
+++ b/pages/dceu.html
@@ -78,22 +78,33 @@
             <article class="noticias-tarjeta">
                 <h3 class="noticias-titulo">Christian Bale se postula para volver a ser Batman</h3>
                 <img class="noticias-imagen" src="../img/bale.jpg" alt="Christian Bale" width="560" height="315">
-            <p class="noticias-texto-imagen">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt exercitationem atque dolorem dolores laborum vel nam dolorum fugit dolor neque deleniti modi consequuntur blanditiis et, molestiae quam reiciendis, vero doloribus.</p>
-            <p class="noticias-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis aut ratione cumque, vel, aliquam, magni deleniti qui quae ipsam ea eius at. At ipsum distinctio, rem perspiciatis harum dicta expedita!</p>
+            <p class="noticias-texto-imagen">La condición de Christian Bale para volver a ser Batman.</p>
+            <p class="noticias-texto">En plena campaña promocional de 'Thor: Love and Thunder', el actor concedió una entrevista a Screenrant en la que habló sobre la posibilidad de volver al universo de Christopher Nolan. <br>
+            <br>
+            Un universo que consta de tres películas: 'Batman Begins', 'El Caballero Oscuro' y 'El Caballero Oscuro: La Leyenda Renace'. En caso de que Nolan volviese a dirigir a Bale en el papel del hombre murciélago, se trataría de la cuarta película de este magnífico dúo cinematográfico. <br>
+            <br>                
+            A la pregunta sobre un posible regreso a su papel de Batman, esta fue la respuesta de Christian Bale: "Si Chris Nolan alguna vez se dijera a sí mismo, 'Sabes qué, tengo otra historia que contar'. Y si quisiera contar esa historia conmigo, me apuntaría". <br>
+            <br>
+            La pregunta es, ¿qué historia podría contar Nolan tras su trilogía?</p>
             </article>  
             
             <article class="noticias-tarjeta">
-                <h3 class="noticias-titulo">Zack Snyder regresará al Universo DC… ¡Pero no como esperaba</h3>
+                <h3 class="noticias-titulo">Zack Snyder regresará al Universo DC… Animado</h3>
                 <img class="noticias-imagen" src="../img/snyder.webp" alt="Zack Snyder">
-                <p class="noticias-texto-imagen">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt exercitationem atque dolorem dolores laborum vel nam dolorum fugit dolor neque deleniti modi consequuntur blanditiis et, molestiae quam reiciendis, vero doloribus.</p>
-                <p class="noticias-texto"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto maxime veritatis reiciendis incidunt laborum provident, illo, pariatur alias animi atque accusamus molestiae nemo. Eius corrupti consectetur, perferendis nulla nemo perspiciatis.</p>
+                <p class="noticias-texto-imagen">Esta es la imagen que se ha compartido desde la convención de entretenimiento.</p>
+                <p class="noticias-texto"> The Hollywood Reporter ha informado de un acontecimiento histórico. Ha sido confirmado a través del panel de Teen Titans Go! en la Comic Con de San Diego 2022. Por lo que se ha reportado, el director Zack Snyder regresará al Universo DC en la serie de animación. Aparecerá en el divertido programa televisivo dando vida a él mismo. Es decir, el cineasta de la Liga de la Justicia saldrá tal como lo conocemos en el episodio 365. <br>
+                    <br>
+                En este episodio, por lo visto, el inmadura equipo de adolescentes del Universo DC entrarán a los estudios de filmación de Warner Bros. Pictures. Quieren encontrar a un director que se asegure de que su episodio 365 sea verdaderamente especial y pueda estrenarse en otoño en Cartoon Network. Es allí donde encontrarán a Zack Snyder. Como veis, la serie de Teen Titans Go! ha aprovechado para incluir por detrás del cineasta dos de sus grandes películas: 300 y Batman v Superman: El amanecer de la Justicia
+                </p>
             </article>
 
             <article class="noticias-tarjeta">
                 <h3 class="noticias-titulo">DC Comics anuncia el título de su nuevo evento y es secuela del mayor crossover de su historia</h3>
                 <img class="noticias-imagen" src="../img/crisis.webp" alt="Crisis En Tierras Infinitas">
-                <p class="noticias-texto-imagen">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto minus corrupti earum est quae, animi neque commodi illo ea dolor unde laudantium, facere officiis, quos itaque. Ex culpa odit vitae.</p>
-                <p class="noticias-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius atque totam corporis perspiciatis quasi nostrum, repellat fugiat obcaecati neque similique nisi in, natus dolores esse unde eligendi, minus illum dolore?</p>
+                <p class="noticias-texto-imagen">Imagen iluetrada de "Kingdom Come", de Alex Ross.</p>
+                <p class="noticias-texto">Los rumores parecen ser ciertos cada vez más y es que parece que las dos principales editoriales de historietas publicarán un nuevo evento en conjunto ya que han revelado el título del crossover entre Marvel y DC. <br>
+                    <br>
+                Los fanáticos del cómic original de Watchmen sabían que ‘Doomsday Clock’ demostraría ser una historia controvertida sin importar cómo terminara, pero lo que no esperaban era que el Dr. Manhattan examinará el futuro y describiera un evento venidero que une a DC y los más grandes héroes de Marvel.</p>
             </article>   
             <section>
                 <article class="video-tarjeta">
